[gd_scene format=3 uid="uid://cjdkmqlkwnn3b"]

[ext_resource type="Script" uid="uid://nmsbi5c21cxq" path="res://scenes/card/card.gd" id="1_imta7"]
[ext_resource type="Texture2D" uid="uid://dehqyg61rlqbt" path="res://scenes/card/assets/sheet.png" id="1_qnn7r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_imta7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtcvk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g65cd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ufkr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kaf1t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ri62e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b2sko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_788ek"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v07qs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0iqnq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s65g1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imta7"]
size = Vector2(38, 58)

[node name="Card" type="Control" unique_id=1794402655 node_paths=PackedStringArray("sprite_2d", "hold_timer")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_imta7")
sprite_2d = NodePath("Sprite2D")
hold_timer = NodePath("HoldTimer")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=382725119]
rotation = -0.011244186
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_qnn7r")
hframes = 10
vframes = 5

[node name="Button" type="Button" parent="." unique_id=1092895074]
layout_mode = 0
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = 30.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_imta7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vtcvk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_g65cd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_2ufkr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kaf1t")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ri62e")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_b2sko")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_788ek")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v07qs")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0iqnq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s65g1")

[node name="HoldTimer" type="Timer" parent="." unique_id=2075940337]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="." unique_id=328260265]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1927416265]
shape = SubResource("RectangleShape2D_imta7")

[connection signal="button_down" from="Button" to="." method="_on_card_down"]
[connection signal="button_up" from="Button" to="." method="_on_card_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_card_pressed"]
